Fixed some dark mode components issues

--- a/src/app/components/admin/users/userCard/userCard.css
+++ b/src/app/components/admin/users/userCard/userCard.css
@@ -8,7 +8,7 @@
 
 :host-context(.dark) .card-container {
     background-color: var(--main-background-color);
-    box-shadow: 0 0px 10px #000000;
+    box-shadow: var(--main-box-shadow);
     border: 1px solid #383838;
 }
 
