--- a/src/app/components/card/card.css
+++ b/src/app/components/card/card.css
@@ -14,7 +14,6 @@
 
 :host-context(.dark) .overlay {
     background-color: rgba(0, 0, 0, .2);
-    border-bottom: 0.5px solid #a7a7a7;
 }
 
 
@@ -26,7 +25,7 @@
 }
 
 :host-context(.dark) .card-container {
-    box-shadow: 0 0px 10px #000000;
+    box-shadow: var(--main-box-shadow);
     background-color: var(--second-background-color);
 }
 
